# akavesdk-rust-prism

./: .env  .gitignore  Cargo.toml  README.md  WASM_OPTIMIZATION.md  build.rs  package-lock.json  package.json
.github/workflows/: copilot-setup-steps.yml  rust-sync-from-golang-pr.lock.yml  rust-sync-from-golang-pr.md  rust-sync-reviewer.lock.yml  rust-sync-reviewer.md
akave-wasm-sdk/: Cargo.toml
akave-wasm-sdk/src/: client.rs  lib.rs
change_plans/: change_plan_1.json  change_plan_1.md  change_plan_2.json  change_plan_2.md  change_plan_3.md  change_plan_4.md  change_plan_5.md  change_plan_6.md  summary_1.md  summary_2.md
examples/native-demo/: Cargo.toml  README.md
examples/native-demo/src/: main.rs
examples/native-demo/test_files/: 1MB.txt  2MB.txt  test.txt
examples/web-demo/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  webpack.config.js
examples/web-demo-react/: README.md  index.html  package-lock.json  package.json
examples/web-demo-react/src/: App.tsx  index.css
examples/web-demo-react/src/components/: AddBucketButton.tsx  FileUploadButton.tsx  Header.tsx
examples/web-demo-react/src/hooks/: useAkave.ts  useDarkMode.ts
examples/web-demo-react/src/pages/: BucketFiles.tsx  FileInfo.tsx
examples/web-demo-react/src/providers/: BlockchainProvider.tsx
examples/web-demo-react/src/providers/AkaveProvider/: akave-context.ts  akave-sdk-singleton.ts
examples/web-demo-react/src/utils/: akave-network.ts
examples/web-demo-v2/: package-lock.json  package.json
examples/web-demo-v2/src/components/: Header.tsx  NotFound.tsx
examples/web-demo-v2/src/pages/: BucketFiles.tsx  FileInfo.tsx  Home.tsx
examples/web-demo-v2/src/providers/AkaveProvider/: AkaveProvider.tsx  akave-context.ts
examples/web-demo/src/: app.ts  index.html  styles.css  types.ts
patches/alloy-consensus/src/transaction/: envelope.rs
proto/: ipcnodeapi.proto
src/: allocator.rs  lib.rs  logger.rs  panic_handler.rs  sdk.rs  sdk_types.rs  wasm.rs
src/blockchain/: access_manager.json  access_manager.rs  block.rs  contract.json  contract_errors.rs  eip712.rs  eip712_types.rs  eip712_utils.rs  ipc_types.rs  mod.rs  provider.rs  storage.json  storage.rs
src/cli/: mod.rs
src/types/: bucket_id.rs  file_id.rs  mod.rs  sdk_types.rs
src/utils/: block_parser.rs  chunkable.rs  cid_utils.rs  cids.rs  dag.rs  destination.rs  encryption.rs  erasure.rs  erasure_test.rs  file_size.rs  http_ext.rs  io.rs  mod.rs  pb_data.rs  peer_id.rs  retry.rs  seekable_web_file.rs  split_vec.rs  splitter.rs  streamenc.rs  testrand.rs  timestamp.rs  tx_data_parser.rs
tests/: exit_code.rs  helpers.rs  testrand.rs
www/: package-lock.json  package.json  vite.config.ts
www/src/: App.tsx
www/src/components/: Header.tsx  WasmTest.tsx
www/src/layouts/: AppLayout.tsx
www/src/providers/: WalletProvider.tsx
