[package]
name = "akave-rs"                                      # TODO: rename
version = "0.1.0"
authors = ["Gilberto Conde <gilberto.conde@lightshift.xyz>",
    "Sam Hassan <sam.hassan@lightshift.xyz>"]
edition = "2021"

[lib]
# Support for both WebAssembly and native builds
crate-type = ["cdylib", "rlib"]

[features]
# Enable optional debugging for panics
default = ["std"]
std = []
vendored-protoc = ["protobuf-src"]
vendored-protox = ["protox"]
debug = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Reduce parallel code generation units to increase optimizations
panic = "abort"        # Remove panic unwinding code
strip = true           # Strip symbols from binary
debug = false          # Remove debug symbols
debug-assertions = false # Remove debug assertions
overflow-checks = false # Remove overflow checks

# -----------------------------------------
#         GENERAL DEPENDENCIES            |
# -----------------------------------------

[dependencies]
# Dependencies shared by all targets
serde = { version = "1.0", features = ["derive"] }
prost = "0.13"
prost-types = "0.13.4" 
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
prost-wkt = "0.6"
# prost-wkt-types = "0.6"
serde_json = "1.0.134"
hex = "0.4.3"
sha2 = "0.10.8"
async-trait = "0.1.85"
futures = "0.3.31"
derivative = "2.2.0"
chrono = { version = "0.4.27", default-features = false, features = ["serde"] }
alloy = "0.11.0"
alloy-sol-types = "0.8.20"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
bytesize = "2.0.1"
cid = "0.7.0"
ipfs-unixfs = "0.2.0"
quick-protobuf = "0.8.0"
reed-solomon-erasure = "4.0.0" # higher versions do not support wasm32. If you want to use more recent versions, you need to import under the non wasm deps and keep wasm deps locked at 4.0.
thiserror = "1.0"
libp2p = "0.55.0"


[dev-dependencies]
pretty_assertions = "1"
multihash-derive = { version = "0.9.0", default-features = false }
multihash-codetable = { version = "0.1.4", default-features = false, features = [
  "sha2",
] }

[build-dependencies]
prost = "0.13"
prost-types = "0.13"
tonic-types = { version = "0.10" }
prost-build = "0.13"
prost-wkt-build = "0.6"
protobuf-src = { version = "1.1.0", optional = true }
protox = { version = "0.6.0", optional = true }
tonic-build = { version = "0.12", default-features = false, features = [
  "prost",
] }


# -----------------------------------------

# -----------------------------------------
#          WASM DEPENDENCIES              |
# -----------------------------------------

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific dependencies
url = "2.5.4"
wasm-bindgen = "0.2.100"
wee_alloc = "0.4.5"
gloo-timers = {version = "0.3.0", features = ["futures"]}
wasm-bindgen-futures = "0.4.49"
serde-wasm-bindgen = "0.4"
tonic-web-wasm-client = "0.6"
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.12", default-features = false, features = [
  "prost",
  "codegen",
] }
web-sys = { version = "0.3", features = [
  "Window",
  "Request",
  "console",
  "File",
  "FileReader",
  "Blob",
  "Crypto",
  "Url",
  "Document",
  "HtmlElement",
  "Event",
] }
js-sys = "0.3"
web3 = { version = "0.19.0", default-features = false, features = [
  "wasm",
  "eip-1193",
] }
tsify-next = { version = "0.5.4", default-features = false, features = ["js"] }

# Optional debugging utility for WebAssembly
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.49"

[target.'cfg(target_arch = "wasm32")'.build-dependencies]
tsify-next = { version = "0.5.4", default-features = false, features = ["js"] }
uuid = { version = "1.15.1", features = [ "v4","js"] }

# -----------------------------------------

# -----------------------------------------
#        NON WASM DEPENDENCIES            |
# -----------------------------------------

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Dependencies for native (non-WASM) builds
tonic = { version = "0.12", default-features = false, features = [
  "prost",
  "codegen",
  "transport",
  "tls",
  "tls-roots",
] }
tokio = { version = "1.42.0", features = ["full"] }
getrandom = { version = "0.2.15", features = ["std"] }
web3 = { version = "0.19.0", features = ["http", "signing"] }
hex-literal = "0.3.4"
uuid = { version = "1.15.1", features = [ "v4",] }
log = "0.4.22"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
env_logger = "0.11.7"
test-log = "0.2.17"
ctor = "0.4.1"
# -----------------------------------------

